<resources>
    <string name="app_name">Earthquake Master</string>
    <string name="title_activity_maps">Map</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_message">There was a problem parsing the HTTP request. Make sure you have a good WIFI connection.</string>
    <string name="title_frag_1">Explore recent earthquakes around the world</string>
    <string name="title_frag_2">Find nearby earthquakes around your country</string>
    <string name="title_frag_3">Show a list of your saved earthquakes</string>
    <string name="title_activity_settings">Settings</string>
    <string name="past_hour">Show in the Past hour</string>
    <string name="past_day">Show in the Past day</string>
    <string name="past_week">Show in the Past week</string>
    <string name="past_month">Show in the Past month</string>
    <string name="appwidget_text">The most recent clicked earthquake marker will be displayed here</string>
    <string name="add_widget">Add widget</string>
    <string name="show_more">To show more click on the widget</string>
    <string name="surrounding_cities">Details</string>
    <string name="textview">TextView</string>
    <string name="close">Close</string>
    <string name="title">Title</string>
    <string name="snippet">Snippet</string>
    <string name="window_title">title</string>
    <string name="window_magnitude">magnitude</string>
    <string name="window_more_info">More info...</string>
    <string name="list_item_test_number">5.2</string>
    <string name="list_item_test_place">Place</string>
    <string name="list_item_test_date">Happened on...</string>
    <string name="magnitude">Magnitude</string>
    <string name="date">Date</string>
    <string name="city_name">City name</string>
    <string name="distance">Distance</string>
    <string name="population">Population</string>
    <string name="earthquake_bookmarks">Earthquakes bookmarks</string>
    <string name="dashes">-----------------------</string>
    <string name="bookmarked_earthquake_list">Bookmarked earthquakes list...</string>
    <string name="loading">Loading data from the server...</string>
    <string name="nearby_earthquakes">Nearby Earthquakes</string>

</resources>
