<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MapsActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/map_fragment_id"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="0dp"
            android:layout_height="0dp"
            map:layout_constraintBottom_toBottomOf="parent"
            map:layout_constraintEnd_toEndOf="parent"
            map:layout_constraintHorizontal_bias="0.0"
            map:layout_constraintStart_toStartOf="parent"
            map:layout_constraintTop_toTopOf="parent"
            map:layout_constraintVertical_bias="0.0" />

        <RadioGroup
            android:id="@+id/radioGroupID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            map:layout_constraintStart_toStartOf="parent"
            map:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/pastHourRBID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/past_hour" />

            <RadioButton
                android:id="@+id/pastDayRBID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/past_day" />

            <RadioButton
                android:id="@+id/pastWeekRBID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/past_week" />

            <RadioButton
                android:id="@+id/pastMonthRBID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/past_month" />
        </RadioGroup>
    </android.support.constraint.ConstraintLayout>

    <LinearLayout
        android:id="@+id/map_error_layout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_margin="64dp"
            android:layout_weight="1"
            android:src="@drawable/warning"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/error_message"
            android:textSize="20sp" />

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="32dp"
            android:layout_marginTop="32dp"
            android:onClick="refreshTheLayout"
            android:src="@drawable/refresh"
            tools:ignore="ContentDescription" />

    </LinearLayout>

</FrameLayout>
