<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/default_layout_margin"
    card_view:cardBackgroundColor="@android:color/background_light"
    card_view:cardElevation="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:id="@+id/nearby_earthquake_mag_id"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:background="@drawable/circle"
            android:gravity="center"
            android:shadowColor="@android:color/white"
            android:shadowRadius="10.0"
            android:text="@string/list_item_test_number"
            android:textColor="#ffffff"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nearby_earthquake_place_id"
                style="@style/title_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/list_item_test_place" />

            <TextView
                android:id="@+id/nearby_earthquake_date_id"
                style="@style/content_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/list_item_test_date" />

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>
